Agregado eliminar objetos

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=49635073461CC2A4A4166ABDC06394CC
 bAllowWindowResize=False
-bAllowMaximize=False
+bAllowMaximize=True
+CopyrightNotice=Copyright (C) 2017 DP2 VR Moche, todos los derechos reservados.
+ProjectName=Editor VR Moche
 
