--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,8 +7,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/MenuLevel.MenuLevel
-GameDefaultMap=/Game/Levels/EditLevel.EditLevel
+EditorStartupMap=/Game/Levels/EditLevel.EditLevel
+GameDefaultMap=/Game/Levels/MenuLevel.MenuLevel
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -50,5 +51,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
