--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,6 @@
 ProjectID=49635073461CC2A4A4166ABDC06394CC
 bAllowWindowResize=False
 bAllowMaximize=True
-CopyrightNotice=Copyright (C) 2017 DP2 VR Moche, todos los derechos reservados.
+CopyrightNotice=Copyright (C) 2017 DP2 VR Moche - PUCP. Todos los derechos reservados.
 ProjectName=Editor VR Moche
 
