Serializacion v1.1, avance de deserializacion

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,4 +4,6 @@ bAllowWindowResize=False
 bAllowMaximize=True
 CopyrightNotice=Copyright (C) 2017 DP2 VR Moche - PUCP. Todos los derechos reservados.
 ProjectName=Editor VR Moche
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "3F3291F3470D55FC74B2969CE6E87ED6", "Editor de Niveles VR Moche")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "E9B252F8458427D0BC7438B60CD91A3E", "{GameName} [Debug] {PlatformArchitecture}")
 
