--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Game/Levels/EditLevel.EditLevel
 GameDefaultMap=/Game/Levels/MenuLevel.MenuLevel
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GameInstanceClass=/Game/Classes/EditorGameInstance.EditorGameInstance_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -51,5 +52,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
