Reestructuradas clases y widgets, pequeños cambios en assets, serializador, entre otros

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/EditLevel.EditLevel
+EditorStartupMap=/Game/Levels/MenuLevel.MenuLevel
 GameDefaultMap=/Game/Levels/MenuLevel.MenuLevel
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GameInstanceClass=/Game/Classes/EditorGameInstance.EditorGameInstance_C
@@ -52,3 +52,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
