--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/EditLevel.EditLevel
 GameDefaultMap=/Game/Levels/MenuLevel.MenuLevel
-GlobalDefaultGameMode=/Game/MyEditorVRGameModeBase.MyEditorVRGameModeBase_C
+GlobalDefaultGameMode=/Script/EditorVR.EditorVRGameModeBase
 GameInstanceClass=/Game/Classes/EditorGameInstance.EditorGameInstance_C
 
 [/Script/Engine.PhysicsSettings]
@@ -52,5 +52,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
