SaveFileDialog, correcciones en Serializer, reestructuración de clases

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# Batch para arreglar las redirecciones
+FixRedirectors.bat
