--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/MenuLevel.MenuLevel
-GameDefaultMap=/Game/Levels/MenuLevel.MenuLevel
+EditorStartupMap=/Game/Levels/EditLevel.EditLevel
+GameDefaultMap=/Game/Levels/EditLevel.EditLevel
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GameInstanceClass=/Game/Classes/EditorGameInstance.EditorGameInstance_C
 
@@ -52,4 +52,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
