sounds and lights

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,6 +12,9 @@ GameDefaultMap=/Game/Levels/MenuLevel.MenuLevel
 GlobalDefaultGameMode=/Script/EditorVR.EditorVRGameModeBase
 GameInstanceClass=/Game/Classes/EditorGameInstance.EditorGameInstance_C
 
+[/Script/Engine.RendererSettings]
+r.GenerateMeshDistanceFields=True
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -52,4 +55,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
