Integracion con dev, pt 3

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,10 +7,10 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/EditLevel.EditLevel
+EditorStartupMap=/Game/Levels/MenuLevel.MenuLevel
 GameDefaultMap=/Game/Levels/MenuLevel.MenuLevel
 GlobalDefaultGameMode=/Script/EditorVR.EditorVRGameModeBase
-GameInstanceClass=/Game/Classes/EditorGameInstance.EditorGameInstance_C
+GameInstanceClass=/Game/Blueprints/EditorGameInstance.EditorGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
