Pequeña correccion en el guardar y exportar, y agregada configuración para pase a producción

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@ DerivedDataCache/*
 
 # Batch para arreglar las redirecciones
 FixRedirectors.bat
+# Iconos para exportar a Windows (Unreal Engine tiene sus propios paths para guardar dichos iconos)
+EditorVRIcon.ico
+EditorVRMiniature.png
