--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,9 +7,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/EditLevel.EditLevel
-GameDefaultMap=/Game/Levels/EditLevel.EditLevel
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+EditorStartupMap=/Game/Levels/MenuLevel.MenuLevel
+GameDefaultMap=/Game/Levels/MenuLevel.MenuLevel
+GlobalDefaultGameMode=/Game/Blueprints/EditorGameMode.EditorGameMode_C
 GameInstanceClass=/Game/Blueprints/EditorGameInstance.EditorGameInstance_C
 
 [/Script/Engine.RendererSettings]
@@ -55,4 +55,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
