--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/EditLevel.EditLevel
 GameDefaultMap=/Game/Levels/EditLevel.EditLevel
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/Blueprints/EditorGameMode.EditorGameMode_C
 GameInstanceClass=/Game/Blueprints/EditorGameInstance.EditorGameInstance_C
 
 [/Script/Engine.RendererSettings]
