--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -46,10 +46,12 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
-+AxisMappings=(AxisName="MoveForward",Key=Down,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
++AxisMappings=(AxisName="MoveUp",Key=E,Scale=1.000000)
++AxisMappings=(AxisName="MoveUp",Key=Up,Scale=1.000000)
++AxisMappings=(AxisName="Turn",Key=Right,Scale=1.000000)
++AxisMappings=(AxisName="Turn",Key=Left,Scale=-1.000000)
++AxisMappings=(AxisName="MoveUp",Key=Q,Scale=-1.000000)
++AxisMappings=(AxisName="MoveUp",Key=Down,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
